# config_sync

./: Cargo.toml  justfile
src/: main.rs
