[package]
name = "config_sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
chrono = "0.4.22"
diffy = "0.3.0"
fs_extra = "1.2.0"
serde = "1.0.145"
serde_derive = "1.0.145"
structopt = "0.3.26"
toml = "0.5.9"
